build/log/idf_py_stderr_output_7852
Command: make -j 14 all
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c: In function 'serve_file':
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:50:14: error: implicit declaration of function 'open'; did you mean 'popen'? [-Wimplicit-function-declaration]
   50 |     int fd = open(full_path, O_RDONLY);
      |              ^~~~
      |              popen
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:50:30: error: 'O_RDONLY' undeclared (first use in this function)
   50 |     int fd = open(full_path, O_RDONLY);
      |                              ^~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:50:30: note: each undeclared identifier is reported only once for each function it appears in
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c: In function 'start_provisioning_server':
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:146:5: error: implicit declaration of function 'wifi_init_softap' [-Wimplicit-function-declaration]
  146 |     wifi_init_softap();
      |     ^~~~~~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c: At top level:
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:24:13: warning: 'event_handler' defined but not used [-Wunused-function]
   24 | static void event_handler(void* arg, esp_event_base_t event_base,
      |             ^~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:132: esp-idf/main/CMakeFiles/__idf_main.dir/provisioning.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6501: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
